--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: grey;
 }
 
 .title {
@@ -37,4 +37,23 @@ li a:hover {
 }
 body p {
   text-align: center;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0px 0.5px 5px 0px #000;
+  width: 500px;
+}
+
+td {
+  height: 300px;
+  text-align: center;
+  width: 250px;
 }
