--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f4f4f4;
+  background-color: #faeaec;
   margin: 0;
 }
 
@@ -8,8 +8,8 @@ body ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #20f9ff;
-  box-shadow: 0.5px 0px 0px 0.5px #0096ff;
+  background-color: #2f3d7e;
+  box-shadow: 0.5px 0px 0px 0.5px black;
   border-radius: 5px;
 }
 
@@ -20,7 +20,7 @@ li {
 
 li a {
   display: block;
-  color: black;
+  color: #faeaec;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -29,14 +29,16 @@ li a {
 }
 
 li a:hover {
-  background-color: #bdfeff;
+  background-color: #faeaec;
+  color: #2f3d7e;
 }
 
 .title {
   text-align: center;
   font-size: 40px;
+  font-weight: bold;
   font-family: "Open Sans";
-  color: #20f9ff;
+  color: #2f3d7e;
   text-shadow: 0px 0px 0px #000000, 1px 1px 2.5px #000;
 }
 body p {
