--- a/style.css
+++ b/style.css
@@ -35,11 +35,12 @@ li a:hover {
 
 .title {
   text-align: center;
-  font-size: 40px;
+  font-size: 60px;
   font-weight: bold;
-  font-family: "Open Sans";
+  font-family: "Oleo Script";
   color: #2f3d7e;
-  text-shadow: 0px 0px 0px #000000, 1px 1px 2.5px #000;
+  text-shadow: 0px 0px 0px #000000, 0.5px 0.5px 1px #000;
+  margin-bottom: 40px;
 }
 body p {
   text-align: center;
