--- a/style.css
+++ b/style.css
@@ -52,17 +52,19 @@ body p {
   padding: 0;
   overflow: hidden;
   width: 500px;
-  border: 2px solid black;
+  border: 2px solid #2f3d7e;
+  color: #2f3d7e;
 }
 .tablecontent {
   list-style-type: none;
   margin: auto;
   padding: 0;
   overflow: hidden;
-  border: 2px solid black;
+  border: 2px solid #2f3d7e;
   width: 500px;
   height: 300px;
   border-top: 0px;
+  color: #2f3d7e;
 }
 
 .header,
@@ -75,24 +77,3 @@ body p {
 .box {
   margin-left: 48%;
 }
-
-/*
-table,
-th,
-td {
-  border: 1px solid black;
-}
-
-table {
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 0px 0.5px 5px 0px #000;
-  width: 500px;
-}
-
-td {
-  height: 300px;
-  text-align: center;
-  width: 250px;
-}
-*/
