--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 .item4 {
   display: inline;
   float: left;
+  font-family: "Open Sans";
 }
 
 li a {
@@ -42,25 +43,29 @@ li a:hover {
   text-shadow: 3px 3px 3px grey, 0.5px 0.5px 1px #000;
   margin-bottom: 40px;
 }
+
 body p {
   text-align: center;
 }
 
 .tableheader {
+  font-family: "Open Sans";
   list-style-type: none;
   margin: auto;
   padding: 0;
   overflow: hidden;
   width: 500px;
-  border: 2px solid #2f3d7e;
+  border: 5px solid #2f3d7e;
   color: #2f3d7e;
 }
+
 .tablecontent {
+  font-family: "Open Sans";
   list-style-type: none;
   margin: auto;
   padding: 0;
   overflow: hidden;
-  border: 2px solid #2f3d7e;
+  border: 5px solid #2f3d7e;
   width: 500px;
   height: 300px;
   border-top: 0px;
