--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body p {
   overflow: hidden;
   border: 5px solid #2f3d7e;
   width: 500px;
-  height: 300px;
+  height: 350px;
   border-top: 0px;
   color: #2f3d7e;
   border-bottom-left-radius: 5px;
@@ -81,11 +81,14 @@ body p {
 .box,
 .timer,
 .excuse,
-.load_time2 {
+.load_time2,
+.coffee,
+.load_time3 {
   text-align: center;
 }
 
 .box,
-.excuse {
+.excuse,
+.coffee {
   margin-top: 5%;
 }
